# deepseek-bot

./: .gitignore  Cargo.toml  README.md  shell.nix
crates/deepseek/: Cargo.toml
crates/deepseek/src/: api.rs  lib.rs  search.rs  types.rs
example/: search_backend.py
src/: config.rs  main.rs  user.rs
