[package]
name = "deepseek-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
simple_logger = "5.0.0"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["full"] }
toml = "0.8.19"
